crates/knotch-derive/tests/ui/workflow_unknown_arg.stderr
error: expected identifier
 --> tests/ui/workflow_unknown_arg.rs:5:32
  |
5 | #[workflow(name = "x", phase = (), milestone = (), gate = (), bogus = 1)]
  |                                ^^
